@@ -8,6 +8,8 @@
  * Fixed DVD copy when reading from a DVD+RW.
  * Fixed --without-alsa configure check
  * Fixed a crash in Video DVD ripping when the title does not contain an audio stream
+ * Only use the mkisofs parameters -biblio, -copyright, and -abstract if they have been set. Using them
+   with invalid values (empty) seems to result in broken iso images sometimes.
 
 1.0
 ===
